.provarCaches/00D410000011HE0EAM/objects/rstk__pjuacwp__c.object
<CustomObject>
    <description>pjuacwp__c</description>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__pjuacwp_project__c + &apos; - &apos; + TEXT(rstk__pjuacwp_txndate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_chargecode__c</fullName>
        <description>pjuacwp_chargecode__c</description>
        <label>Charge Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_cmpno__c</fullName>
        <description>pjuacwp_cmpno__c</description>
        <label>Company Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_desc__c</fullName>
        <description>pjuacwp_desc__c</description>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_dim1__c</fullName>
        <description>pjuacwp_dim1__c</description>
        <label>Dimension Value 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_dim2__c</fullName>
        <description>pjuacwp_dim2__c</description>
        <label>Dimension Value 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_dim3__c</fullName>
        <description>pjuacwp_dim3__c</description>
        <label>Dimension Value 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_div__c</fullName>
        <description>pjuacwp_div__c</description>
        <label>Division Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_error__c</fullName>
        <description>pjuacwp_error__c</description>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_iodc__c</fullName>
        <description>pjuacwp_iodc__c</description>
        <label>Indirect ODC Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_lodc__c</fullName>
        <description>pjuacwp_lodc__c</description>
        <label>Travel ODC Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_modc__c</fullName>
        <description>pjuacwp_modc__c</description>
        <label>Misc ODC Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_odcid__c</fullName>
        <description>pjuacwp_odcid__c</description>
        <label>ODC Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_processerr__c</fullName>
        <defaultValue>false</defaultValue>
        <description>pjuacwp_processerr__c</description>
        <label>Process Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_project__c</fullName>
        <description>pjuacwp_project__c</description>
        <label>Project Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_resubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>pjuacwp_resubmit__c</description>
        <label>Resubmit Changed Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_sodc__c</fullName>
        <description>pjuacwp_sodc__c</description>
        <label>Service ODC Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_syodc__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>pjuacwp_syodc__c</description>
        <label>ODC Code</label>
        <referenceTo>rstk__syodc__c</referenceTo>
        <relationshipLabel>Project Indirect Cost Transaction Upload</relationshipLabel>
        <relationshipName>pjuacwp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_txndate__c</fullName>
        <description>pjuacwp_txndate__c</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_txnrefnum__c</fullName>
        <description>pjuacwp_txnrefnum__c</description>
        <label>Transaction Reference Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_validationerr__c</fullName>
        <defaultValue>false</defaultValue>
        <description>pjuacwp_validationerr__c</description>
        <label>Validation Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__pjuacwp_vendor__c</fullName>
        <description>pjuacwp_vendor__c</description>
        <label>Vendor Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Project Indirect Cost Transaction Upload</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Indirect Cost Transaction Upload</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>